feat(workflows): implemented

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,25 @@
+# https://github.com/actions/deploy-pages#usage
 name: Deploy to GitHub Pages
-
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
       - run: npm install
-      - run: NUXT_APP_BASE_URL=/energy-efficiency-calculator/ npx nuxt build --preset github_pages
+      - run: npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./.output/public
-
   deploy:
     needs: build
     permissions:
@@ -28,10 +27,9 @@ jobs:
       id-token: write
     environment:
       name: github_pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          path: ./.output/public
