--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,11 @@ jobs:
         with:
           node-version: "20"
       - run: npm install
-      - run: NUXT_APP_BASE_URL=/energy-efficiency-calculator/ npx nuxt build --preset github_pages
-      - run: echo "" > .output/public/.nojekyll
+      - run: npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./.output/public
-
   deploy:
     needs: build
     permissions:
@@ -28,10 +26,9 @@ jobs:
       id-token: write
     environment:
       name: github_pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          path: ./.output/public
